<resources>
    <string name="app_name">LNMIIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="weblink">lnmiit.ac.in</string>
    <string name="academics">Academics</string>
    <string name="admissions">Admissions</string>
    <string name="placements">Placements</string>
    <string name="administration">Administration</string>
    <string name="faculty">Faculty</string>
    <string name="student">Students</string>
    <string name="emergency">Emergency</string>
    <string name="bus">Bus</string>
    <string name="map">Map</string>
    <string name="dining">Dining</string>
    <string name="gallery">Gallery</string>
    <string name="about">About Us</string>
    <string-array name="cse_faculty_url">
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=20231&amp;amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=70&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=212&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/images/system/noprofile.jpg</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=151&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=133&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=56&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=54&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=140&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=73&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=145&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=50&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=75&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=78&amp;command=profile_pic&amp;w=100&amp;h=100</item>
    </string-array>
    <string-array name="cse_faculty_name">
        <item>Prof. Narasimha Bolloju</item>
        <item>Prof. Ravi Prakash Gorthi</item>
        <item>Dr. Sakthi Balan Muthiah</item>
        <item>Dr. Subrat Kumar Dash</item>
        <item>Dr. Bharavi Mishra</item>
        <item>Dr. Poonam Gera</item>
        <item>Dr. Preety Singh</item>
        <item>Dr. Rajbir Kaur</item>
        <item>Dr. Vibhor Kant</item>
        <item>Mr. Dinesh Khandelwal</item>
        <item>Mr. Sunil Kumar</item>
        <item>Mr. Vikas Bajpai</item>
        <item>Ms. Sonam Nahar</item>
        <item>Mr. Mukesh K Jadon</item>

    </string-array>
    <string-array name="cse_faculty_designation">
        <item>Professor</item>
        <item>Professor</item>
        <item>Associate Professor</item>
        <item>Associate Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Lecturer</item>
    </string-array>
    <string-array name="cse_faculty_email">
        <item>narsi.bolloju@lnmiit.ac.in</item>
        <item>rgorthi@lnmiit.ac.in</item>
        <item>sakthi.balan@lnmiit.ac.in</item>
        <item>subrat@lnmiit.ac.in</item>
        <item>bharavi@lnmiit.ac.in</item>
        <item>poonamgera.21@gmail.com</item>
        <item>prtysingh@gmail.com</item>
        <item>catchrajbirkaur@gmail.com</item>
        <item>vibhor.kant@lnmiit.ac.in</item>
        <item>dineshk@lnmiit.ac.in</item>
        <item>sunil@lnmiit.ac.in</item>
        <item>vikas.bajpai87@gmail.com</item>
        <item>sonamnahar@gmail.com</item>
        <item>jadonmukesh30@gmail.com</item>
    </string-array>
    <string-array name="cse_faculty_contact">
        <item> </item>
        <item>+917597167508</item>
        <item>+919739979480</item>
        <item>+919413825982</item>
        <item>+917727017662</item>
        <item>+918764395180</item>
        <item>+919828364396</item>
        <item>+919829688889</item>
        <item> </item>
        <item>+918764038699</item>
        <item> </item>
        <item>+918875522828</item>
        <item>+919530176476</item>
        <item> </item>
    </string-array>
    <string-array name="ece_faculty_url">
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=77&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=46&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=82&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=119&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=195&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=149&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=144&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=20269&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=166&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=189&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=150&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=47&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=98&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=20280&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=93&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=53&amp;command=profile_pic&amp;w=100&amp;h=100</item>
        <item>http://lnmiit.ac.in/ImageGenerator.aspx?imgID=20267&amp;command=profile_pic&amp;w=100&amp;h=100</item>
    </string-array>
    <string-array name="ece_faculty_name">
        <item>Prof. Ranjan Gangopadhyay</item>
        <item>Prof. Raghuvir Tomar</item>
        <item>Dr. Soumitra Debnath</item>
        <item>Dr. Abhishek Sharma</item>
        <item>Dr. Akshaykumar Salimath</item>
        <item>Dr. Divyang Rawal</item>
        <item>Dr. Kusum Lata</item>
        <item>Dr. M. V. Deepak Nair</item>
        <item>Dr. Navneet Upadhyay</item>
        <item>Dr. Santosh Shah</item>
        <item>Dr. Smrity Dwivedi</item>
        <item>Mr. Dharmendra Dixit</item>
        <item>Mr. Kapil Jainwal</item>
        <item>Mr. Nikhil Sharma</item>
        <item>Mr. Purnendu Karmakar</item>
        <item>Mr. Sandeep Saini</item>
        <item>Ms. Joyeeta Singha</item>
    </string-array>
    <string-array name="ece_faculty_designation">
        <item>Distinguished Professor</item>
        <item>Professor</item>
        <item>Associate Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>
        <item>Assistant Professor</item>

    </string-array>
    <string-array name="ece_faculty_email">
        <item>ranjan_iitkgp@yahoo.com</item>
        <item>rtomar@lnmiit.ac.in</item>
        <item>soumitra@lnmiit.ac.in</item>
        <item>abhisheksharma@lnmiit.ac.in</item>
        <item>akshay.salimath@lnmiit.ac.in</item>
        <item>divyang.rawal@gmail.com</item>
        <item>kusum@lnmiit.ac.in</item>
        <item>deepak.nair@lnmiit.ac.in</item>
        <item>nupadhyay@lnmiit.ac.in</item>
        <item>santosh.shah@lnmiit.ac.in</item>
        <item>smrity.ece@lnmiit.ac.in</item>
        <item>ddixit@lnmiit.ac.in</item>
        <item>kapil.jainwal@lnmiit.ac.in</item>
        <item>nikhil.sharma@lnmiit.ac.in</item>
        <item>purnendu.karmakar@lnmiit.ac.in</item>
        <item>sandeep.saini@lnmiit.ac.in</item>
<item>
joyeeta.singha@lnmiit.ac.in
</item>
    </string-array>
    <string name="nature_of_work">The Scholars will be required to help the faculty of LNM IIT, Jaipur in setting up modern
        laboratories in analog and digital electronics, Communication, Computers and digital library and for helping in the
        conduct of classes and laboratories. </string>
    <string name="scholars_intro">LNM Scholars are second-tier of the academic backbone of the Institute, after the faculty.
        You participate in academic activities, alongside the faculty, and prepare yourself for a career upgrade through
        additional qualification.</string>
    <string name="eligibility">
        <ul>
            <li>B.Tech. in Electronics, Communication, Computers or equivalent.\n</li>
            <li>M. Tech in Electronics, Communication, Computers or equivalent.\n</li>
            <li>M. Sc. Physics with Applied Electronics.</li>
        </ul>
    </string>
    <string name="scholarshp">The Scholars will be provided an honorarium of Rs. 13,000 -18,000 per month. (Typically,
        hostel accommodation is provided to bachelors.) The revision of the LNM Scholar honorarium is under active
        consideration, and a decision is expected soon.When these scholars register for MS or PhD, their tuition is
        waived by the Institute.</string>
    <string name="opportunity">The Scholars are strongly encouraged to register for higher studies. Candidates with a B.Tech.
        or an M.Sc. degree may do M. S. (by Research) and MTech and those with an M.Tech. degree may work for Ph.D. while
        working as LNM Scholar.\</string>
    <string name="abt_contact">The convener of UG admissions,\nThe LNM Institute of Information Technology,\nRupa ki Nangal, Post-Sumel, Via-Jamdoli \nJaipur-302031, (Rajasthan) INDIA.\nConvener of PG Admissions:91-141-268-9011 / 12 / 13</string>
    <string name="programs">
        <ul>
            <li>Computer Science and Engineering\n</li>
            <li>Electronics and Communication Engineering\n</li>
            <li>Communication and Computer Engineering\n</li>
            <li>Engineering Physics\n</li>
            <li>Mathematics and Information Technology\n</li>
            <li>Mechatronics Engineering</li>
        </ul>
    </string>
    <string name="eligibilty">
        Students who will fullfill the college criteria of JEE-Prelims and JEE-Advance exams are eligible for the admission.
    </string>
</resources>