<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_backgrnd"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:orientation="vertical"
        android:padding="@dimen/global_padding">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/global_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/programs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:gravity="left"
                    android:padding="@dimen/global_padding"
                    android:text="Programs Offered"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/divider_white" />

                <TextView
                    android:id="@+id/about_programs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top"
                    android:padding="5dp"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:text="@string/programs"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="@dimen/norml_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/global_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eligibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:gravity="left"
                    android:padding="@dimen/global_padding"
                    android:text="Eligibility"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/divider_white" />

                <TextView
                    android:id="@+id/about_eligibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top"
                    android:padding="5dp"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:text="@string/eligibilty"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="@dimen/norml_text" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/global_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:gravity="left"
                    android:padding="@dimen/global_padding"
                    android:text="Contact Us"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/divider_white" />

                <TextView
                    android:id="@+id/about_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:layout_marginTop="@dimen/margin_top"
                    android:paddingBottom="@dimen/padding_bottom"
                    android:paddingLeft="5dp"
                    android:text="@string/abt_contact"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="@dimen/norml_text" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>